@@ -1,2 +1,1 @@
-This is the Linux port of the Sun Java(tm) Development Kit, version 1.4.0.
-This version runs only on Linux and NetBSD-1.6*-i386.
+This is the Linux port of the Sun Java(tm) Development Kit, version 1.4.1.
