@@ -1,5 +1,5 @@
 ===========================================================================
-$NetBSD: MESSAGE,v 1.5 2002/10/13 07:29:34 jlam Exp $
+$NetBSD: MESSAGE,v 1.6 2003/01/29 11:13:28 jlam Exp $
 
 In order to invoke the JVM, the data segment size set by your shell's
 'ulimit' builtin must be at least 131204 -- please refer to your shell's
@@ -9,7 +9,7 @@ You may want to read
 
 	${PREFIX}/README
 
-for details about running this jdk.  In a nutshell you may want to set the
+for details about running this JDK.  In a nutshell you may want to set the
 following in your shell environment:
 
 	CLASSPATH to ${PREFIX}/src.zip:.
