@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1 2002/05/14 18:00:55 jschauma Exp $
+$NetBSD: distinfo,v 1.2 2003/01/29 11:13:29 jlam Exp $
 
-SHA1 (j2sdk-1_4_0-linux-i386.bin) = 0805e8b6794c95323dbf33b862075b760fc40693
-Size (j2sdk-1_4_0-linux-i386.bin) = 40618207 bytes
+SHA1 (j2sdk-1_4_1_01-linux-i586.bin) = 24afb3c549071db467697384189784d262f1f574
+Size (j2sdk-1_4_1_01-linux-i586.bin) = 42129700 bytes
