@@ -1,0 +1,36 @@
+# $NetBSD: common,v 1.1 2003/01/29 11:13:29 jlam Exp $
+
+.systemPrefs
+COPYRIGHT
+LICENSE
+README
+bin/ControlPanel
+bin/java
+bin/keytool
+bin/kinit
+bin/klist
+bin/ktab
+bin/orbd
+bin/policytool
+bin/rmid
+bin/rmiregistry
+bin/servertool
+bin/tnameserv
+jre
+man/ja
+man/ja_JP.eucJP/man1/java.1
+man/ja_JP.eucJP/man1/keytool.1
+man/ja_JP.eucJP/man1/orbd.1
+man/ja_JP.eucJP/man1/policytool.1
+man/ja_JP.eucJP/man1/rmid.1
+man/ja_JP.eucJP/man1/rmiregistry.1
+man/ja_JP.eucJP/man1/servertool.1
+man/ja_JP.eucJP/man1/tnameserv.1
+man/man1/java.1
+man/man1/keytool.1
+man/man1/orbd.1
+man/man1/policytool.1
+man/man1/rmid.1
+man/man1/rmiregistry.1
+man/man1/servertool.1
+man/man1/tnameserv.1
