@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1 2002/05/14 18:00:56 jschauma Exp $
+$NetBSD: distinfo,v 1.2 2003/01/29 11:13:30 jlam Exp $
 
-SHA1 (j2re-1_4_0-linux-i386.bin) = 9cfecb00065e5b6b21fa3e747cd5ef40d7a2f313
-Size (j2re-1_4_0-linux-i386.bin) = 21826430 bytes
+SHA1 (j2re-1_4_1_01-linux-i586.bin) = d65557e9be05ad551065225b967cea42d7ad04e4
+Size (j2re-1_4_1_01-linux-i586.bin) = 22839295 bytes
